@@ -1,6 +1,6 @@
-MD5 216947a1ae20680cdc518d193be72d06 eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951
-RMD160 55a0f98229feb47d936acbcdcf7ad42074ebdb5c eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951
-SHA256 fa9f8d047d8375ab55eaca12c110bd9faf9eb5452af2a70d038afd5a6b4b5171 eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951
+MD5 51140d81ef8b8a4a49443202143d437c eclipse-sdk-3.2.1-patches-fridrik.tar.bz2 86387
+RMD160 f74db89228bf46f3e3f2cb01f247f8a99c91d035 eclipse-sdk-3.2.1-patches-fridrik.tar.bz2 86387
+SHA256 859a63f274f9d8d7dc095b262e41c9126096496e4327d535ed761e68e0086426 eclipse-sdk-3.2.1-patches-fridrik.tar.bz2 86387
 MD5 0fe89e9c7cf07a56c4fe8e2d7f5a394b eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420
 RMD160 9648176b79adac7217371e5b8dee7aeb4cd458db eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420
 SHA256 2d6a0628333d068b6ab678c42f925d71df1c003035543830a30e3ee80fb855c7 eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420
